fix: styling issues for documentation page on mobile

--- a/docs/assets/styles/components/_codeview.scss
+++ b/docs/assets/styles/components/_codeview.scss
@@ -32,8 +32,6 @@
         max-height: 600px;
 
         &.hljs {
-          background: inherit;
-          color: inherit;
           padding: 1.25rem 1.5rem;
         }
       }
